[package]
name = "peridio-cli"
description = "Peridio CLI"
homepage = "https://peridio.com"
repository = "https://github.com/peridio/peridio-cli"
version = "0.11.0"
edition = "2021"

[dependencies]
peridio-sdk = { git = "https://github.com/peridio/peridio-rust.git", rev = "b9981c1" }
serde_json = "1.0"
snafu = "0.7"
tokio = { version = "1.20.3", features = ["full"] }
tower = {version = "0.4"}
directories = "4.0.1"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"]}
serde = "1.0.144"
indicatif = "0.17.0"
futures-util = "0.3.24"
flate2 = "1.0.24"
tar = "0.4.38"
uuid = {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
base64 = "0.21.3"
clap = {version = "4.4.2", features = ["derive", "env"]}
termcolor = "1.2.0"
ed25519-dalek  = { version = "2", features = ["pem"] }
sha2 = "0.10.7"
backon = "0.4.1"
console = "0.15.7"
