[package]
name = "peridio-cli"
description = "Peridio CLI"
homepage = "https://peridio.com"
repository = "https://github.com/peridio/peridio-cli"
version = "0.24.0"
edition = "2021"

[dependencies]
peridio-sdk = { git = "https://github.com/peridio/peridio-rust.git", rev = "133b49b" }
serde_json = "1.0"
snafu = "0.8"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4" }
directories = "5.0.1"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde = "1.0.144"
indicatif = "0.17.0"
futures-util = "0.3.24"
flate2 = "1.0.24"
tar = "0.4.38"
uuid = { version = "1.10", features = [
    "v4",
    "v7",
    "fast-rng",
    "macro-diagnostics",
] }
base64 = "0.21.3"
clap = { version = "4.5.0", features = ["derive", "env"] }
termcolor = "1.4.1"
ed25519-dalek = { version = "2", features = ["pem"] }
sha2 = "0.10.7"
backon = "0.4.1"
console = "0.15.7"
clap-num = "1.1.1"
rcgen = { version = "0.13.1", features = ["pem", "x509-parser"] }
time = { version = "0.3.30", features = ["formatting", "parsing", "macros"] }
x509-parser = "0.16.0"

[dev-dependencies]
# assert on peridio-cli for integration tests
assert_cmd = "2.0.13"
# indent mix stdout and stderr on failure in tests
indent = "0.1.1"
# starting once and cleaning up `mix -S phx.server` for integration tests
static_init = "1.0.3"
# predicates for matching peridio-cli output
predicates = "3.1.0"
# parsing JSON output during integration testing
serde_json = "1.0.113"
# temporary file for integration tests
tempfile = "3.10"
